@@ -11,7 +11,7 @@ class CondorGRAMBatchSubmitPlugin(CondorCEBatchSubmitPlugin):
    
     def __init__(self, apfqueue, config=None):
         if not config:
-            qcl = apfqueue.factory.qcl            
+            qcl = apfqueue.qcl            
         else:
             qcl = config
         newqcl = qcl.clone().filterkeys('batchsubmit.condorgram', 'batchsubmit.condorce')    
