@@ -16,7 +16,7 @@ class CondorLocalBatchSubmitPlugin(CondorBaseBatchSubmitPlugin):
     def __init__(self, apfqueue, config=None):
         
         if not config:
-            qcl = apfqueue.factory.qcl            
+            qcl = apfqueue.qcl            
         else:
             qcl = config
         newqcl = qcl.clone().filterkeys('batchsubmit.condorlocal', 'batchsubmit.condorbase')
