@@ -12,7 +12,7 @@ class CondorPBSBatchSubmitPlugin(CondorGridBatchSubmitPlugin):
     
     def __init__(self, apfqueue, config=None):
         if not config:
-            qcl = apfqueue.factory.qcl            
+            qcl = apfqueue.qcl            
         else:
             qcl = config
         newqcl = qcl.clone().filterkeys('batchsubmit.condorpbs', 'batchsubmit.condorgrid')
